<menu xmlns:clienda="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arturobermejo.clienda.ClientDetail" >

    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_action_search"
        clienda:showAsAction="collapseActionView|ifRoom"
        clienda:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_call"
        android:icon="@drawable/ic_call"
        android:title="@string/call_client"
        clienda:showAsAction="always" />

    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit"
        clienda:showAsAction="ifRoom" />

    <item android:id="@+id/action_remove"
        android:icon="@drawable/ic_action_remove"
        android:title="@string/action_remove"
        clienda:showAsAction="never" />
    
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        clienda:showAsAction="never" />

</menu>
