<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:id="@+id/formClientName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/address"
            android:id="@+id/formClientAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="phone"
            android:hint="@string/phone"
            android:id="@+id/formClientPhone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:id="@+id/formClientEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/formClientNotes"
            android:hint="@string/notes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <Button
                android:layout_width="0dp"
                android:layout_marginRight="5dp"
                android:background="#669900"
                android:textColor="@android:color/background_light"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/save"
                android:id="@+id/formClientSave" />
            <Button
                android:layout_width="0dp"
                android:layout_marginLeft="5dp"
                android:background="#FF4444"
                android:textColor="@android:color/background_light"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:id="@+id/formClientCancel" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>



