<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arturobermejo.clienda.MainActivity" >

    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_new_order"
        android:icon="@drawable/ic_menu_new_order"
        android:title="@string/action_new_order"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
