<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp">

            <Button
                android:layout_width="0dp"
                android:background="#0099CC"
                android:textColor="@android:color/background_light"
                android:layout_marginRight="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/select_client"
                android:id="@+id/formOrderClient" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:background="#0099CC"
                android:textColor="@android:color/background_light"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="+"
                android:id="@+id/formOrderNewClient" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/formOrderProduct"
            android:hint="@string/product_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:id="@+id/formOrderPrice" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/quantity"
            android:inputType="number"
            android:id="@+id/formOrderQuantity" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="#0099CC"
            android:textColor="@android:color/background_light"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/change"
            android:id="@+id/formOrderChangeDate" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/formOrderNotes"
            android:hint="@string/notes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="100dp"
                android:background="#669900"
                android:textColor="@android:color/background_light"
                android:layout_marginRight="5dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:id="@+id/formOrderSave" />
            <Button
                android:layout_width="100dp"
                android:layout_marginLeft="5dp"
                android:background="#FF4444"
                android:textColor="@android:color/background_light"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:id="@+id/formOrderCancel" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>