<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arturobermejo.clienda.NewOrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <Button
                    android:layout_width="0dp"
                    android:background="@android:color/holo_blue_dark"
                    android:textColor="@android:color/background_light"
                    android:layout_marginRight="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/select_client"
                    android:id="@+id/formOrderClient" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:background="@android:color/holo_blue_dark"
                    android:textColor="@android:color/background_light"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:text="+"
                    android:id="@+id/formOrderNewClient" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:id="@+id/formOrderProduct"
                android:hint="@string/product_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:id="@+id/formOrderPrice" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:id="@+id/formOrderQuantity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/secondary_text_light"
                    android:textStyle="normal"
                    android:text="@string/select_date"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/formOrderDate"
                    android:layout_alignTop="@+id/formOrderDate" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:background="@android:color/holo_blue_dark"
                    android:textColor="@android:color/background_light"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:id="@+id/formOrderChangeDate" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:id="@+id/formOrderNotes"
                android:hint="@string/notes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="100dp"
                    android:background="@android:color/holo_green_dark"
                    android:textColor="@android:color/background_light"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:id="@+id/formOrderSave" />
                <Button
                    android:layout_width="100dp"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/holo_red_light"
                    android:textColor="@android:color/background_light"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:id="@+id/formOrderCancel" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
